--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -420,6 +420,8 @@ section {
           transition: all .4s ease-in-out;
           h3 {
               font-size: 1.5rem;
+              text-align: center;
+              justify-content: center;
               color: var(--color-white);
               margin-bottom: 1.5rem;
           }
