please work - updated colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,9 @@
 }
 
 :root {
-  --color-primary: #191d2b;
-  --color-secondary: #2499ec;
-  --color-hover: #2499ec;
+  --color-primary: #051C2C;
+  --color-secondary: #59CBE8;
+  --color-hover: #E93CAC;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
