added different animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-  --color-primary: #051C2C;
+  --color-primary: #191919;
   --color-secondary: #59CBE8;
   --color-hover: #E93CAC;
   --color-white: #FFFFFF;
@@ -43,6 +43,20 @@ body {
   font-size: 1.1rem;
   color: var(--color-white);
   transition: all 0.4s ease-in-out;
+  overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
 
 a {
@@ -77,9 +91,11 @@ section {
 
 .active {
   display: block;
-  -webkit-animation: appear 1s ease-in-out;
-          animation: appear 1s ease-in-out;
+  overflow: hidden;
+  -webkit-animation: bounce-in-right 1.2s ease-in-out;
+          animation: bounce-in-right 1.2s ease-in-out;
   transform: translateY(0) scaleY(1);
+  overflow: auto;
 }
 @-webkit-keyframes appear {
   0% {
@@ -95,6 +111,38 @@ section {
   }
   100% {
     transform: translateY(0) scaleY(1);
+  }
+}
+@-webkit-keyframes bounce-in-right {
+  0% {
+    opacity: 0;
+    transform: translateX(2000px);
+  }
+  60% {
+    opacity: 1;
+    transform: translateX(-30px);
+  }
+  80% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes bounce-in-right {
+  0% {
+    opacity: 0;
+    transform: translateX(2000px);
+  }
+  60% {
+    opacity: 1;
+    transform: translateX(-30px);
+  }
+  80% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
 
