--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -43,7 +43,7 @@ body {
   font-size: 1.1rem;
   color: var(--color-white);
   transition: all .4s ease-in-out;
-  overflow: hidden;
+  overflow: auto;
 }
 
 body::-webkit-scrollbar {
@@ -92,7 +92,6 @@ section {
 
 .active {
   display: block;
-  overflow: hidden;
   animation: bounce-in-right 1.2s ease-in-out;
   transform: translateY(0) scaleY(1);
   @keyframes appear {
