--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ section {
           clip-path: polygon(0 0, 46% 0, 79% 50%, 0% 100%);
 }
 .header-content .left-header .image {
-  border-radius: var(--br-sm-2);
+  border-radius: 50%;
   height: 90%;
   width: 68%;
   margin-left: 4rem;
@@ -247,6 +247,7 @@ section {
   transition: all 0.5s ease-in-out;
 }
 .header-content .left-header .image img {
+  border-radius: 50%;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -570,6 +571,7 @@ section {
   filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
 }
 .blogs .blog img {
+  border-radius: 10%;
   width: 100%;
   height: 300px;
   -o-object-fit: cover;
@@ -709,6 +711,13 @@ section {
 .btn-con {
   display: flex;
   align-self: flex-start;
+  padding-bottom: 5px;
+}
+
+.btn-con-live {
+  display: flex;
+  align-self: flex-start;
+  padding: 10px;
 }
 
 .main-btn {
