--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -201,13 +201,14 @@ section {
           
       }
       .image {
-          border-radius: var(--br-sm-2);
+          border-radius: 50%;
           height: 90%;
           width: 68%;
           margin-left: 4rem;
           background-color: var(--color-black);
           transition: all .5s ease-in-out;
           img {
+              border-radius: 50%;
               width: 100%;
               height: 100%;
               object-fit: cover;
@@ -513,6 +514,7 @@ section {
           }
       }
       img {
+          border-radius: 10%;
           width: 100%;
           height: 300px;
           object-fit: cover;
@@ -657,7 +659,14 @@ section {
 .btn-con {
   display: flex;
   align-self: flex-start;
+  padding-bottom: 5px;
+
 }
+.btn-con-live {
+    display: flex;
+    align-self: flex-start;
+    padding: 10px;
+  }
 .main-btn {
   border-radius: 30px;
   color: inherit;
