--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,8 @@ section {
   transform: translateY(-50%);
 }
 .controls .control {
+  -webkit-animation: bounce-in-right 1.2s ease-in-out;
+          animation: bounce-in-right 1.2s ease-in-out;
   padding: 1rem;
   cursor: pointer;
   background-color: var(--color-grey-4);
@@ -188,6 +190,8 @@ section {
 }
 
 .theme-btn {
+  -webkit-animation: bounce-in-right 1.2s ease-in-out;
+          animation: bounce-in-right 1.2s ease-in-out;
   top: 5%;
   right: 3%;
   width: 70px;
@@ -239,7 +243,7 @@ section {
           clip-path: polygon(0 0, 46% 0, 79% 50%, 0% 100%);
 }
 .header-content .left-header .image {
-  border-radius: 50%;
+  border-radius: 10000000px;
   height: 90%;
   width: 68%;
   margin-left: 4rem;
@@ -247,13 +251,13 @@ section {
   transition: all 0.5s ease-in-out;
 }
 .header-content .left-header .image img {
-  border-radius: 50%;
+  border-radius: 10000000px;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   transition: all 0.4s ease-in-out;
-  filter: scalia(75%) blur(0.5px);
+  filter: scalia(25%) blur(0.5px);
 }
 .header-content .left-header .image img:hover {
   transition: all 0.8s ease;
