--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -125,8 +125,11 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
   transform: translateY(-50%);
+  
   .control{
+    animation: bounce-in-right 1.2s ease-in-out;
       padding: 1rem;
       cursor: pointer;
       background-color: var(--color-grey-4);
@@ -138,11 +141,13 @@ section {
       align-items: center;
       margin: .7rem 0;
       box-shadow: var(--box-shadow-1) ;
+      
       i {
           font-size: 1.2rem;
           color: var(--color-grey-2);
           pointer-events: none;
       }
+     
   }
   .active-btn {
       background-color: var(--color-secondary);
@@ -153,6 +158,7 @@ section {
 }
 
 .theme-btn {
+    animation: bounce-in-right 1.2s ease-in-out;
   top: 5%;
   right: 3%;
   width: 70px;
@@ -201,19 +207,20 @@ section {
           
       }
       .image {
-          border-radius: 50%;
+          border-radius: 10000000px;
           height: 90%;
           width: 68%;
           margin-left: 4rem;
           background-color: var(--color-black);
           transition: all .5s ease-in-out;
           img {
-              border-radius: 50%;
+              border-radius: 10000000px;
               width: 100%;
               height: 100%;
               object-fit: cover;
               transition: all .4s ease-in-out;
-              filter: scalia(75%) blur(0.5px);
+              filter: scalia(25%) blur(0.5px);
+              
               &:hover{
                 transition: all .8s ease;
                 filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
