--- a/css/styles.css
+++ b/css/styles.css
@@ -575,7 +575,7 @@ section {
   filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
 }
 .blogs .blog img {
-  border-radius: 10%;
+  border-radius: 1000px;
   width: 100%;
   height: 300px;
   -o-object-fit: cover;
