--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,7 @@ section {
           clip-path: polygon(0 0, 46% 0, 79% 50%, 0% 100%);
 }
 .header-content .left-header .image {
-  border-radius: 10000000px;
+  border-radius: 1000px;
   height: 90%;
   width: 68%;
   margin-left: 4rem;
@@ -251,7 +251,8 @@ section {
   transition: all 0.5s ease-in-out;
 }
 .header-content .left-header .image img {
-  border-radius: 10000000px;
+  border-radius: 1000px;
+  border-style: groove;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -555,18 +556,17 @@ section {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
   margin-top: 3rem;
-  
 }
 .blogs .blog {
   position: relative;
   background-color: var(--color-grey-5);
-  border-radius: 20px;
+  border-radius: 5px;
   box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
   transition: all 0.4s ease-in-out;
 }
 .blogs .blog:hover {
   box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
-  transform: translateY(-2px);
+  transform: translateY(-5px);
   transition: all 0.4s ease-in-out;
 }
 .blogs .blog:hover img {
@@ -576,7 +576,7 @@ section {
   filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
 }
 .blogs .blog img {
-  border-radius: 10px;
+  border-radius: 10%;
   width: 100%;
   height: 300px;
   -o-object-fit: cover;
@@ -613,7 +613,7 @@ section {
 }
 .blogs .blog .blog-text p:hover {
   transition: all 0.8s ease;
-  transform: scale(1.1);
+  transform: scale(1.2);
   filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
   color: var(--color-secondary);
 }
