--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -207,14 +207,16 @@ section {
           
       }
       .image {
-          border-radius: 10000000px;
+          border-radius: 1000px;
+          
           height: 90%;
           width: 68%;
           margin-left: 4rem;
           background-color: var(--color-black);
           transition: all .5s ease-in-out;
           img {
-              border-radius: 10000000px;
+              border-radius: 1000px;
+              border-style: groove;
               width: 100%;
               height: 100%;
               object-fit: cover;
