--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -207,7 +207,7 @@ section {
           
       }
       .image {
-          border-radius: 1000px;
+          border-radius: 100%;
           
           height: 90%;
           width: 68%;
@@ -215,7 +215,7 @@ section {
           background-color: var(--color-black);
           transition: all .5s ease-in-out;
           img {
-              border-radius: 1000px;
+              border-radius: 100%;
               border-style: groove;
               width: 100%;
               height: 100%;
