--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -523,7 +523,7 @@ section {
           }
       }
       img {
-          border-radius: 10%;
+          border-radius: 2%;
           width: 100%;
           height: 300px;
           object-fit: cover;
@@ -536,11 +536,12 @@ section {
           margin-top: -7px;
           padding: 1.1rem;
           align-items: center;
+          justify-content: center;
           border-top: 8px solid var(--color-secondary);
           h4 {
               font-size: 1.5rem;
               text-align: center;
-              margin-bottom: .7rem;
+            //   margin-bottom: .7rem;
               transition: all .4s ease-in-out;
               cursor: pointer;
               &:hover { 
@@ -549,17 +550,17 @@ section {
                 filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
                 color: var(--color-secondary); }
           }
-          p{
-              color: var(--color-grey-2);
-              line-height: 2rem;
-              text-align: center;
-              padding-bottom: 1rem;
-              &:hover { 
-                transition: all .8s ease;
-                transform: scale(1.2);
-                filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
-                color: var(--color-secondary); }
-          }
+        //   p{
+        //       color: var(--color-grey-2);
+        //       line-height: 2rem;
+        //       text-align: center;
+        //       padding-bottom: 1rem;
+        //       &:hover { 
+        //         transition: all .8s ease;
+        //         transform: scale(1.2);
+        //         filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
+        //         color: var(--color-secondary); }
+        //   }
       }
   }
 }
