--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,6 @@ section {
 }
 .header-content .left-header .image img {
   border-radius: 100%;
-  border-style: groove;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -725,6 +724,8 @@ section {
 
 .btn-con-live {
   display: flex;
+  position: relative;
+  left: 100px;
   align-self: flex-start;
   padding: 10px;
 }
