--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -216,7 +216,7 @@ section {
           transition: all .5s ease-in-out;
           img {
               border-radius: 100%;
-              border-style: groove;
+              // border-style: groove;
               width: 100%;
               height: 100%;
               object-fit: cover;
@@ -690,6 +690,8 @@ section {
 }
 .btn-con-live {
     display: flex;
+    position: relative;
+    left: 100px;
     align-self: flex-start;
     padding: 10px;
   }
