--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,7 @@ section {
           clip-path: polygon(0 0, 46% 0, 79% 50%, 0% 100%);
 }
 .header-content .left-header .image {
-  border-radius: 100%;
+  border-radius: 1000px;
   height: 90%;
   width: 68%;
   margin-left: 4rem;
@@ -251,7 +251,7 @@ section {
   transition: all 0.5s ease-in-out;
 }
 .header-content .left-header .image img {
-  border-radius: 100%;
+  border-radius: 1000px;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
