--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -440,7 +440,7 @@ section {
           width: 100%;
           height: 300px;
           object-fit: cover;
-          border-radius: 5px;
+          border-radius: 15px;
       }
       .hover-items {
           width: 100%;
@@ -485,6 +485,7 @@ section {
                       margin: 0 1rem;
                   }
                   &:hover {
+                      border-radius: 50%;
                       background-color: var(--color-white);
                       i { color: var(--color-primary); }
                   }
