--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -207,7 +207,7 @@ section {
           
       }
       .image {
-          border-radius: 1000px;
+          border-radius: 50rem;
           
           height: 90%;
           width: 68%;
@@ -215,14 +215,14 @@ section {
           background-color: var(--color-black);
           transition: all .5s ease-in-out;
           img {
-              border-radius: 1000px;
+              border-radius: 50rem;
               
               width: 100%;
               height: 100%;
               object-fit: cover;
               transition: all .4s ease-in-out;
               filter: scalia(25%) blur(0.5px);
-              
+             
               &:hover{
                 transition: all .8s ease;
                 filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
@@ -230,7 +230,11 @@ section {
           }
       }
   }
-
+  @media all and (max-device-width: 480px) {
+    .image {
+      border-radius: 100%;
+    }
+  }
   .right-header {
       display: flex;
       flex-direction: column;
@@ -695,6 +699,11 @@ section {
     left: 100px;
     align-self: flex-start;
     padding: 10px;
+  }
+  @media all and (max-device-width: 480px) {
+    .btn-con-live {
+      left: 50px;
+    }
   }
 .main-btn {
   border-radius: 30px;
