--- a/css/styles.css
+++ b/css/styles.css
@@ -232,50 +232,61 @@ section {
 }
 .header-content .left-header .h-shape {
   transition: all 0.4s ease-in-out;
-  width: 65%;
+  width: 85%;
   height: 100%;
   background-color: var(--color-secondary);
   position: absolute;
   left: 0;
   top: 0;
   z-index: -1;
-  -webkit-clip-path: polygon(0 0, 46% 0, 79% 50%, 0% 100%);
-          clip-path: polygon(0 0, 46% 0, 79% 50%, 0% 100%);
+  -webkit-clip-path: polygon(40% 0, 56% 80%, 39% 40%, 0% 100%);
+          clip-path: polygon(40% 0, 56% 80%, 39% 40%, 0% 100%);
 }
 .header-content .left-header .image {
-  border-radius: 100000px;
-  height: 90%;
-  width: 68%;
+  border-radius: 1000000000px;
+  position: absolute;
+  height: 65%;
+  width: 65%;
   margin-left: 4rem;
   background-color: var(--color-black);
   transition: all 0.5s ease-in-out;
+  transition: transform 1s;
 }
 .header-content .left-header .image img {
-  border-radius: 100000px;
+  border-radius: 1000000000px;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  transition: all 0.4s ease-in-out;
-  filter: scalia(25%) blur(0.5px);
+  transition: all 0.9s ease-in-out;
 }
 .header-content .left-header .image img:hover {
   transition: all 0.8s ease;
   filter: drop-shadow(16px 16px 30px var(--color-secondary)) invert(3%);
 }
-.header-content .right-header {
+.header-content .left-header .cursor {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  background-color: #dbe1e8;
+  border-radius: 100%;
+  transition: transform 1s;
+  filter: drop-shadow(16px 16px 30px var(--color-white));
+}
+
+.right-header {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-right: 18rem;
 }
-.header-content .right-header .name {
+.right-header .name {
   font-size: 3rem;
 }
-.header-content .right-header .name span {
+.right-header .name span {
   color: var(--color-secondary);
 }
-.header-content .right-header p {
+.right-header p {
   margin: 1.5rem 0;
   line-height: 2rem;
 }
@@ -723,19 +734,6 @@ section {
   padding-bottom: 5px;
 }
 
-.btn-con-live {
-  display: flex;
-  position: relative;
-  left: 100px;
-  align-self: flex-start;
-  padding: 10px;
-}
-
-@media all and (max-device-width: 480px) {
-  .btn-con-live {
-    left: 50px;
-  }
-}
 .main-btn {
   border-radius: 30px;
   color: inherit;
@@ -776,6 +774,27 @@ section {
   background-color: var(--color-secondary);
   transform: translateX(0);
   transition: all 0.8s ease-out;
+}
+
+.live-btn {
+  left: 10px;
+  border-radius: 30px;
+  color: inherit;
+  font-weight: 600;
+  position: relative;
+  border: 1px solid var(--color-secondary);
+  display: flex;
+  align-self: flex-start;
+  align-items: center;
+  overflow: hidden;
+}
+.live-btn .btn-icon {
+  background-color: var(--color-secondary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  padding: 1rem;
 }
 
 .main-title {
@@ -999,8 +1018,7 @@ section {
     display: none;
   }
   .left-header .image {
-    width: 90% !important;
-    margin: 0 auto !important;
+    display: none;
   }
   .right-header {
     grid-row: 1;
