changed home format

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -184,7 +184,7 @@ section {
 /*Header-content*/
 .header-content {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 2fr;
   min-height: 100vh;
   .left-header {
       display: flex;
