--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,7 @@ section {
 /*Header-content*/
 .header-content {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 2fr;
   min-height: 100vh;
 }
 .header-content .left-header {
