--- a/css/styles.css
+++ b/css/styles.css
@@ -537,30 +537,30 @@ section {
 }
 
 .portfolios {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
+  display: flex;
+  gap: 5rem;
   justify-self: center;
   justify-content: center;
+  align-content: center;
   margin-top: 3rem;
   border: 3px solid var(--color-primary);
 }
 .portfolios .portfolio-item {
-  width: 30vh;
+  width: 50vh;
   height: 40vh;
   position: relative;
   border-radius: 45px;
   box-shadow: 6px -6px 15px #0b0b0b, -6px 6px 15px #272727;
 }
 .portfolios .portfolio-item img {
-  width: 30vh;
+  width: 50vh;
   height: 40vh;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 45px;
 }
 .portfolios .portfolio-item .hover-items {
-  width: 30vh;
+  width: 50vh;
   height: 40vh;
   background-color: var(--color-secondary);
   position: absolute;
