--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -114,7 +114,8 @@
     }
   
     .portfolios{
-        grid-template-columns: repeat(1, 1fr);
+        display: flex;
+        flex-direction: row;
         padding-bottom: 6rem;
         margin-top: 1rem;
     }
@@ -240,7 +241,7 @@
         margin-top: 6rem;
     }
     .portfolios{
-        grid-template-columns: repeat(2, 1fr);
+        // grid-template-columns: repeat(2, 1fr);
     }
     .header-content .right-header{
     //   display: flex;
