--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -544,31 +544,36 @@ section {
   justify-self: center;
   justify-content: center;
   align-content: center;
- 
+  align-items: center;
+  // transform: translateY(50%);
   // grid-gap: 6rem;
   margin-top: 3rem;
   
   border: 3px solid var(--color-primary);
   
   
-  // &:hover {
-  //   width: 50vh;
-  // }
+  
   .portfolio-item {
-      width: 50vh;
+      width: 10vh;
       height: 40vh;
       position: relative;
       border-radius: 45px;
       box-shadow: 6px -6px 15px #0b0b0b,
       -6px 6px 15px #272727;
-      
+      &:hover {
+        width: 50vh;
+      }
       
       img {
-          width: 50vh;
+          width: 10vh;
           height: 40vh;
           object-fit: cover;
           border-radius: 45px;
+          &:hover {
+            width: 50vh;
+          }
       }
+     
       .hover-items {
         width: 50vh;
         height: 40vh;
