--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -32,16 +32,16 @@
             border-radius: 40px;
             right: 250px;
             top: 180px;
-            height: 2rem;
-            width: 2rem;
+            height: 50px;
+            width: 50px;
         //   display: flex;
         //   height: 100px;
         // width: 100px;
         margin: 0;
         // top: 200px;
         img {
-            height: 2rem;
-            width: 2rem;
+            height: 50px;
+            width: 1em;
             border-radius: 40px;
         }
         }
