--- a/css/styles.css
+++ b/css/styles.css
@@ -563,12 +563,13 @@ section {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 45px;
+  transition: all 1s ease;
 }
 .portfolios .portfolio-item img:hover {
-  display: none;
+  opacity: 0;
 }
 .portfolios .portfolio-item .hover-items {
-  width: 50vh;
+  width: 60vh;
   height: 40vh;
   background-color: var(--color-secondary);
   position: absolute;
