--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-  transition: all 0.3s;
+  transition: all 0.1s;
 }
 
 :root {
@@ -19,6 +19,8 @@
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
+  --box-color-1: #0c0c0c;
+  --box-color-2: #262626;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
@@ -36,6 +38,8 @@
   --color-grey-4: #454e56;
   --color-grey-5: #f8f8f8;
   --color-grey-6: #12181b;
+  --box-color-1: #a4a4a4;
+  --box-color-2: #ffffff7e;
 }
 
 body {
@@ -176,7 +180,7 @@ section {
   justify-content: center;
   align-items: center;
   margin: 0.7rem 0;
-  box-shadow: 5px -3px 5px #0c0c0c, -3px 5px 5px #262626;
+  box-shadow: 5px -3px 5px var(--box-color-1), -3px 5px 5px var(--box-color-2);
 }
 .controls .control i {
   font-size: 1.2rem;
@@ -205,7 +209,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 6px -6px 15px #0b0b0b, -6px 6px 15px #272727;
+  box-shadow: 6px -6px 15px var(--box-color-1), -6px 6px 15px var(--box-color-2);
   transition: all 0.1s ease-in-out;
 }
 .theme-btn:active {
@@ -236,7 +240,7 @@ section {
   margin: 2px;
   width: 30vh;
   height: 30vh;
-  top: -230px;
+  top: -200px;
   left: 260px;
 }
 .header-content .left-header .h-shape {
@@ -319,8 +323,7 @@ section {
   padding: 5rem;
   margin: 7vh;
   border-radius: 70px;
-  background: linear-gradient(45deg, #1b1b1b, #171717);
-  box-shadow: 8px 8px 16px #0c0c0c, -8px -8px 16px #272727;
+  box-shadow: 8px 8px 16px var(--box-color-1), -8px -8px 16px var(--box-color-2);
 }
 .right-header .name {
   text-align: center;
@@ -356,13 +359,13 @@ section {
   border: 1px solid var(--color-primary);
   border-radius: 25px;
   transition: all 0.4s ease-in-out;
-  box-shadow: 10px -10px 20px #0b0b0b, -10px 10px 20px #272727;
+  box-shadow: 10px -10px 20px var(--box-color-1), -10px 10px 20px var(--box-color-2);
 }
 .about-container .right-about .about-item:hover {
   cursor: default;
   transform: translateY(-5px);
   border: 1px solid var(--color-secondary);
-  box-shadow: 12px -12px 24px #0c0c0c, -12px 12px 24px #272727;
+  box-shadow: 12px -12px 24px var(--box-color-1), -12px 12px 24px var(--box-color-2);
 }
 .about-container .right-about .about-item .abt-text {
   padding: 1.5rem;
@@ -372,7 +375,7 @@ section {
 .about-container .right-about .about-item .abt-text .large-text {
   font-size: 3rem;
   font-weight: 700;
-  color: var(--color-grey0);
+  color: var(--color-secondary);
 }
 .about-container .right-about .about-item .abt-text .small-text {
   padding-left: 3rem;
@@ -551,7 +554,7 @@ section {
   height: 40vh;
   position: relative;
   border-radius: 45px;
-  box-shadow: 6px -6px 15px #0b0b0b, -6px 6px 15px #272727;
+  box-shadow: 6px -6px 15px var(--box-color-1), -6px 6px 15px var(--box-color-2);
   transition: all 1s ease;
 }
 .portfolios .portfolio-item:hover {
@@ -593,7 +596,7 @@ section {
 }
 .portfolios .portfolio-item .hover-items h3:hover {
   color: var(--color-primary);
-  text-shadow: 8px 8px 16px #0c0c0c, -8px -8px 16px #272727;
+  text-shadow: 8px 8px 16px var(--box-color-1), -8px -8px 16px var(--box-color-2);
 }
 .portfolios .portfolio-item .hover-items .desc-text {
   color: var(--color-primary);
@@ -821,7 +824,7 @@ section {
   align-self: flex-start;
   align-items: center;
   overflow: hidden;
-  box-shadow: 8px 8px 16px #0c0c0c, -8px -8px 16px #272727;
+  box-shadow: 8px 8px 16px var(--box-color-1), -8px -8px 16px var(--box-color-2);
 }
 .main-btn .btn-text {
   padding: 0 2rem;
@@ -892,7 +895,7 @@ section {
   font-weight: 700;
 }
 .main-title h2 span {
-  color: var(--color-grey0);
+  color: var(--color-secondary);
 }
 .main-title h2 .bg-text {
   position: absolute;
