--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-  transition: all 0.3s;
+  transition: all 0.1s;
 }
 
 :root {
@@ -19,6 +19,8 @@
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
+  --box-color-1: #0c0c0c;
+  --box-color-2: #262626;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
@@ -36,6 +38,8 @@
   --color-grey-4: #454e56;
   --color-grey-5: #f8f8f8;
   --color-grey-6: #12181b;
+  --box-color-1: #a4a4a4;
+  --box-color-2: #ffffff7e;
 }
 
 body {
@@ -146,8 +150,8 @@ section {
       justify-content: center;
       align-items: center;
       margin: .7rem 0;
-      box-shadow:  5px -3px 5px #0c0c0c,
-                  -3px 5px 5px #262626;
+      box-shadow:  5px -3px 5px var(--box-color-1),
+                  -3px 5px 5px var(--box-color-2);
       
       i {
           font-size: 1.2rem;
@@ -177,8 +181,8 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 6px -6px 15px #0b0b0b,
-  -6px 6px 15px #272727;
+  box-shadow: 6px -6px 15px var(--box-color-1),
+  -6px 6px 15px var(--box-color-2);
   transition: all .1s ease-in-out;
   &:active{ transform: translateY(-3px); }
   i{
@@ -210,7 +214,7 @@ section {
       margin: 2px;
       width:30vh;
       height:30vh;
-      top: -230px;
+      top: -200px;
       left: 260px;
       // -webkit-border-radius: 40px;
       // border-radius: 50%;
@@ -326,9 +330,9 @@ section {
       margin: 7vh;
       -webkit-border-radius: 50px;
       border-radius: 70px;
-      background: linear-gradient(45deg, #1b1b1b, #171717);
-      box-shadow:  8px 8px 16px #0c0c0c,
-      -8px -8px 16px #272727;
+      // background: linear-gradient(45deg, #1b1b1b, #171717);
+      box-shadow:  8px 8px 16px var(--box-color-1),
+      -8px -8px 16px var(--box-color-2);
       
       .name {
         text-align: center;
@@ -365,14 +369,14 @@ section {
           border: 1px solid var(--color-primary);
           border-radius: 25px;
           transition: all .4s ease-in-out;
-          box-shadow: 10px -10px 20px #0b0b0b,
-          -10px 10px 20px #272727;
+          box-shadow: 10px -10px 20px var(--box-color-1),
+          -10px 10px 20px var(--box-color-2);
           &:hover {
               cursor: default;
               transform: translateY(-5px);
               border: 1px solid var(--color-secondary);
-              box-shadow: 12px -12px 24px #0c0c0c,
-              -12px 12px 24px #272727;
+              box-shadow: 12px -12px 24px var(--box-color-1),
+              -12px 12px 24px var(--box-color-2);
           }
           .abt-text {
               padding: 1.5rem;
@@ -381,7 +385,7 @@ section {
               .large-text {
                   font-size: 3rem;
                   font-weight: 700;
-                  color: var(--color-grey0);
+                  color: var(--color-secondary);
               }
               .small-text {
                   padding-left: 3rem;
@@ -558,8 +562,8 @@ section {
       height: 40vh;
       position: relative;
       border-radius: 45px;
-      box-shadow: 6px -6px 15px #0b0b0b,
-      -6px 6px 15px #272727;
+      box-shadow: 6px -6px 15px var(--box-color-1),
+      -6px 6px 15px var(--box-color-2);
       transition: all 1s ease;
       &:hover {
         width: 60vh;
@@ -603,8 +607,8 @@ section {
             &:hover {
               
               color: var(--color-primary);
-              text-shadow: 8px 8px 16px #0c0c0c,
-              -8px -8px 16px #272727;
+              text-shadow: 8px 8px 16px var(--box-color-1),
+              -8px -8px 16px var(--box-color-2);
             }
             
           }
@@ -857,8 +861,8 @@ section {
   align-items: center;
  
   overflow: hidden;
-  box-shadow:  8px 8px 16px #0c0c0c,
-  -8px -8px 16px #272727;
+  box-shadow:  8px 8px 16px var(--box-color-1),
+  -8px -8px 16px var(--box-color-2);
   .btn-text { padding: 0 2rem; }
   .btn-icon {
       background-color: var(--color-secondary);
@@ -932,7 +936,7 @@ section {
       text-transform: uppercase;
       font-size: 4rem;
       font-weight: 700;
-      span { color: var(--color-grey0); }
+      span { color: var(--color-secondary); }
       .bg-text {
           position: absolute;
           top: 50%;
