--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -241,6 +241,7 @@ section {
       }
       .image {
           border-radius: 40px;
+          border: 2px solid var(--color-secondary);
           position: relative;
           height: 30vh;
           width: 30vh;
