--- a/css/styles.css
+++ b/css/styles.css
@@ -541,17 +541,23 @@ section {
 }
 
 .portfolios {
-  display: flex;
   gap: 5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+  row-gap: 3rem;
   justify-self: center;
   justify-content: center;
   align-content: center;
   align-items: center;
   margin-top: 3rem;
-  border: 3px solid var(--color-primary);
 }
 .portfolios .portfolio-item {
-  width: 30vh;
+  border: 1px solid var(--color-primary);
+  align-content: center;
+  justify-content: center;
+  width: 50vh;
   height: 40vh;
   position: relative;
   border-radius: 45px;
@@ -559,10 +565,10 @@ section {
   transition: all 1s ease;
 }
 .portfolios .portfolio-item:hover {
-  width: 60vh;
+  scale: 0.9;
 }
 .portfolios .portfolio-item img {
-  width: 30vh;
+  width: 50vh;
   height: 40vh;
   -o-object-fit: cover;
      object-fit: cover;
@@ -573,7 +579,7 @@ section {
   opacity: 0;
 }
 .portfolios .portfolio-item .hover-items {
-  width: 60vh;
+  width: 50vh;
   height: 40vh;
   background-color: var(--color-secondary);
   position: absolute;
