--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -71,6 +71,11 @@ a {
   text-decoration: none;
   color: inherit;
   font-family: inherit;
+  
+}
+.demo-link {
+  font-weight: 700;
+  color:rgba(255, 0, 0, 0.3);
 }
 
 header {
@@ -537,6 +542,7 @@ section {
 .port-text {
   padding: 2rem 0;
   text-align: center;
+  
 }
 
 .portfolios {
@@ -553,7 +559,7 @@ section {
   align-content: center;
   align-items: center;
   // transform: translateY(50%);
-  // grid-gap: 6rem;
+  grid-gap: 3rem;
   margin-top: 3rem;
   
   
@@ -561,8 +567,6 @@ section {
   
   
   .portfolio-item {
-    
-    
     border: 1px solid var(--color-primary);
     align-content: center;
     justify-content: center;
@@ -588,6 +592,7 @@ section {
           
             
           }
+          
       }
      
       .hover-items {
@@ -601,7 +606,8 @@ section {
           display: flex;
           justify-content: center;
           align-items: center;
-          
+          justify-items: center;
+          align-content: center;
           flex-direction: column;
           opacity: 0;
           transform: scale(0);
@@ -618,6 +624,8 @@ section {
               text-shadow: 8px 8px 16px var(--box-color-1),
               -8px -8px 16px var(--box-color-2);
             }
+
+            
             
           }
           .desc-text
@@ -658,10 +666,11 @@ section {
   }
 }
 
+
 .portfolio-item:hover .hover-items {
   opacity: 1;
   transform: scale(1);
-   
+  
 }
 
 //Blogs Section
