--- a/css/styles.css
+++ b/css/styles.css
@@ -1024,31 +1024,28 @@ section {
   .portfolios {
     display: grid;
     grid-template-columns: 1fr;
-    justify-self: center;
-    justify-content: center;
-    justify-items: center;
-    align-content: center;
-    align-items: center;
   }
   .portfolios .portfolio-item {
-    width: 30vh;
+    width: 40vh;
+    height: 40vh;
+    margin-top: 1rem;
     align-content: center;
+    align-items: center;
     justify-content: center;
-    height: 20vh;
-  }
-  .portfolios .portfolio-item:hover {
-    scale: 0.3;
+    justify-items: center;
+    justify-self: center;
   }
   .portfolios .portfolio-item img {
-    width: 30vh;
-    height: 20vh;
-  }
-  .portfolios .portfolio-item:hover {
-    scale: 0.3;
+    width: 40vh;
+    height: 40vh;
   }
   .portfolios .hover-items {
-    width: 30vh;
-    height: 20vh;
+    width: 40vh;
+    height: 40vh;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
   }
   .blogs {
     grid-template-columns: repeat(1, 1fr);
@@ -1096,7 +1093,7 @@ section {
     font-size: 2.3rem;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1650px) {
   .container {
     padding: 7rem 6rem;
     align-content: center;
@@ -1130,7 +1127,7 @@ section {
     overflow: wrap;
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     justify-content: center;
     align-content: center;
     align-items: center;
@@ -1146,7 +1143,7 @@ section {
     font-size: 4.5rem;
   }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1651px) {
   .blogs {
     grid-template-columns: repeat(2, 1fr);
     margin-top: 6rem;
