changed desc text on port items

--- a/css/styles.css
+++ b/css/styles.css
@@ -617,7 +617,11 @@ section {
   color: var(--color-primary);
   text-align: center;
   padding: 15px;
-  font-weight: 500;
+  font-weight: 800;
+}
+.portfolios .portfolio-item .hover-items .desc-text:hover {
+  color: var(--color-secondary);
+  text-shadow: 8px 8px 16px var(--box-color-1), -8px -8px 16px var(--box-color-2);
 }
 .portfolios .portfolio-item .hover-items .icons {
   display: flex;
@@ -1040,7 +1044,7 @@ section {
     height: 40vh;
   }
   .portfolios .hover-items {
-    width: 40vh;
+    width: 20vh;
     height: 40vh;
     align-items: center;
     align-content: center;
