--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -633,7 +633,13 @@ section {
               color: (var(--color-primary));
               text-align: center;
               padding: 15px;
-              font-weight: 500;
+              font-weight: 800;
+              &:hover {
+                color: var(--color-secondary);
+                
+                text-shadow: 8px 8px 16px var(--box-color-1),
+              -8px -8px 16px var(--box-color-2);
+              }
             }
           .icons {
               display: flex;
