--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -636,7 +636,7 @@ section {
               font-weight: 800;
               &:hover {
                 color: var(--color-secondary);
-                
+                -webkit-text-stroke: 1px var(--color-primary);
                 text-shadow: 8px 8px 16px var(--box-color-1),
               -8px -8px 16px var(--box-color-2);
               }
